# DoctorXperts

./: package-lock.json  package.json  redme presentation
Backend/: Dockerfile  README.md  app.py  chatbot.py  pyproject.toml  reportanalysis.py  requirements.txt
UI/: .gitignore  package-lock.json  package.json  tailwind.config.ts
UI/src/app/: layout.tsx  page.tsx
UI/src/app/about/: page.tsx
UI/src/app/bmi/: page.tsx
UI/src/app/contact/: page.tsx
UI/src/app/login/: page.tsx
UI/src/app/signup/: page.tsx
UI/src/app/tools/Report-Analysis/: page.tsx
UI/src/app/tools/ai_assistant/: page.tsx
UI/src/app/tools/dite_planner/: page.tsx
UI/src/app/tools/reminder/: page.tsx
UI/src/components/: Footer.tsx  Header.tsx  HealthChatButton.tsx  Hero.tsx  chatInterface.tsx  gettouch.tsx  health.tsx  pricing.tsx
UI/src/hooks/: use-toast.ts
